hphp/test/zend/good/Zend/tests/traits/language014.php.expectf

Fatal error: Method 'hello' declared in multiple traits in %s/language014.php on line 17
